src/components/PostContextMenu/Menu/menu.css
.container_menu {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  justify-content: space-around;
  margin-left: 20px;
  margin-right: 20px;
}

.full-screen-container_menu {
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #fff;
  overflow-y: auto;
  display: flex;
  flex-direction: column;
}

.header_menu {
  width: 100%;
  height: 40px;
  line-height: 3;
}

.title_menu {
  font-size: 14px;
  color: #0f181e;
  font-weight: bold;
}

.content_menu {
  display: flex;
  flex-direction: row;
}

.full-screen-content_menu {
  display: flex;
  overflow: auto;
  flex: 1;
  flex-direction: column;
}

.box-item_menu {
  min-height: min-content; /* needs vendor prefixes */
  display: flex;
}

.wrapper-close-button_menu {
  float: right;
  height: 40px;
  width: 40px;
  cursor: pointer;
}

.close-button_menu {
  margin-top: 12px;
  width: 16px;
  height: 16px;
  float: right;
}

.footer_menu {
  width: 100%;
  height: 40px;
  font-size: 12px;
  color: #979b9e;
  display: flex;
  align-items: center;
  justify-content: center;
}

.filler_menu {
  flex-grow: 1;
}

